--- a/detail.html
+++ b/detail.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <h3 id="title"> 제목 : </h3>
-    <h3 id="director"> 감독 : </h3>
-    <h3 id="genre"> 장르 : </h3>
-    <h3 id="runtime"> 상영시간 : </h3>
-    <h3 id="rating"> 평점 : </h3>
+    <h3 id="title"> Title : </h3>
+    <h3 id="director"> Director : </h3>
+    <h3 id="genre"> Genre : </h3>
+    <h3 id="runtime"> Runtime : </h3>
+    <h3 id="rating"> Rating : </h3>
 </body>
 
 </html>
