--- a/detail.html
+++ b/detail.html
@@ -34,7 +34,7 @@
                 }
             }
         };
-        xhr.open('GET', 'http://localhost:5000/ns_movie/movie/'+id);
+        xhr.open('GET', 'http://10.40.0.1/ns_movie/movie/'+id);
         xhr.responseType='json'
         xhr.send();
     }
