--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <div class="cards">
 <!-- <a href="detail?movie_id=1"><div class="row"> -->
   <div class="column nature">
-    <div class="content" id=1 onclick=test(this.id)>
+    <div class="content" id=1 onclick=click_event(this.id)>
       <img src="static/assets/1.jpg" alt="Mountains" style="width:100%">
       <h4>Evil Dead 2013</h4>
     </div>
@@ -51,82 +51,18 @@
   </div>
   <a href="detail?movie_id=2">
   <div class="column nature">
-    <div class="content">
+    <div class="content" id=2 onclick=click_event(this.id)>
       <img src="static/assets/2.jpg" alt="Lights" style="width:100%">
       <h4>Annabelle Creation (2017)</h4>
     </div>
   </div>
   <a href="detail?movie_id=3">
   <div class="column nature">
-    <div class="content">
+    <div class="content" id=3 onclick=click_event(this.id)>
       <img src="static/assets/3.jpg" alt="Nature" style="width:100%">
       <h4>Insidious The Last Key (2018)</h4>
     </div>
   </div>
-<a href="detail?movie_id=4">
-  <div class="column cars">
-    <div class="content">
-      <img src="static/assets/4.jpg" alt="Car" style="width:100%">
-      <h4>The Conjuring 2 2016</h4>
-    </div>
-  </div>
-  <a href="detail?movie_id=5">
-  <div class="column cars">
-    <div class="content">
-      <img src="static/assets/5.jpg" alt="Car" style="width:100%">
-      <h4>Dawn of Justice</h4>
-    </div>
-  </div>
-  <a href="detail?movie_id=6">
-  <div class="column cars">
-    <div class="content">
-      <img src="static/assets/6.jpg" alt="Car" style="width:100%">
-      <h4>Suicide Squad</h4>
-    </div>
-  </div>
- <a href="detail?movie_id=7">
-  <div class="column people">
-    <div class="content">
-      <img src="static/assets/7.jpg" alt="People" style="width:100%" download>
-      <h4>John Wick Chapter 1</h4>
-    </div>
-    <a href="detail?movie_id=8">
-  </div>
-  <div class="column people">
-    <div class="content">
-      <img src="static/assets/8.jpg" alt="People" style="width:100%">
-      <h4>John Wick Chapter 2</h4>
-    </div>
-  </div>
-  <a href="detail?movie_id=9">
-  <div class="column people">
-    <div class="content">
-      <img src="static/assets/9.jpg" alt="People" style="width:100%">
-      <h4>John Wick Chapter 3</h4>
-    </div>
-  </div>
-  <a href="detail?movie_id=10">
-  <div class="column people">
-    <div class="content">
-      <img src="static/assets/10.jpg" alt="People" style="width:100%">
-      <h4>Lost In Space S1</h4>
-    </div>
-  </div>
-  <a href="detail?movie_id=11">
-  <div class="column people">
-    <div class="content">
-      <img src="static/assets/11.jpg" alt="People" style="width:100%">
-      <h4>Pacific Rim 2013</h4>
-    </div>
-  </div>
-  <a href="detail?movie_id=12">
-  <div class="column people">
-    <div class="content">
-      <img src="static/assets/12.jpg" alt="People" style="width:100%">
-      <h4>Pacific Rim Uprising 2017</h4>
-    </div>
-  </div>
-
 <!-- END GRID -->
 </div>
 
@@ -139,7 +75,7 @@
 </body>
 </html>
 <script>
-  function test(id){
+  function click_event(id){
     location.href='detail.html?movie_id='+id;
   }
 </script>
